<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gamma Master</string>
    <string name="default_gamma1">0.15</string>
    <string name="default_gamma2">0.20</string>
    <string name="default_z0">50.0</string>
    <string name="r_load_lt_50"><![CDATA[R < Zo, Ω]]></string>
    <string name="r_load_gt_50"><![CDATA[R  > Zo, Ω]]></string>
    <string name="zo_equals">Zo, Ω =</string>
    <string name="source">Source</string>
    <string name="load">Load</string>
    <string name="_50">50.0</string>
    <string name="return_loss_db">Return loss, dB</string>
    <string name="gamma">Gamma, Γ</string>
    <string name="mismatch_error_p_db">Mismatch Error, dB :</string>
    <string name="mismatch_phase_error_deg">Mismatch Error, ± deg :</string>
    <string name="vswr">VSWR, n:1</string>
    <string name="mismatch_loss_db">Mismatch Loss, dB</string>
    <string name="ad_unit_name" tools:ignore="UnusedResources">main_ad</string>

    <string name="banner_ad_unit_id_PRODUCTION">ca-app-pub-2187584046682559/4751972693</string>
    <string name="banner_ad_unit_id_DEMO" tools:ignore="UnusedResources">ca-app-pub-3940256099942544/6300978111</string>

    <string name="banner_ad_unit_id">@string/banner_ad_unit_id_PRODUCTION</string>

    <!--for development-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="back_button">back button</string>
    <string name="preset">Preset</string>
    <string name="save_current_as_preset">Save Current as Preset</string>
    <string name="revert_to_default">Revert to Default</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="preset_stored">Preset Values stored</string>
    <string name="asset_about_html">about_html.html</string>
    <string name="asset_help_html">help_html.html</string>

    <string name="web_privacy_doc">https://sailinghawklabs.com/privacy/gamma_master_privacy.html</string>
</resources>
